socials endpoints and docs done, awaiting testing
